--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Effective Javascript</title>
+        <title>Effective JavaScript</title>
     </head>
     <body>
         <script src="chapter_3/item_19.js"></script>
