--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>Effective JavaScript</title>
     </head>
     <body>
-        <script src="chapter_3/item_21.js"></script>
+        <script src="chapter_3/item_21_22.js"></script>
     </body>
 </html>
