--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Effective JavaScript</title>
     </head>
     <body>
-        <script src="chapter_6/item_54.js"></script>
+        <canvas id="canvas"></canvas>
+        <script src="chapter_6/item_56.js"></script>
     </body>
 </html>
